# enki-ng

./: CMakeLists.txt  README.md  run-test.sh  todo.txt
icons/: icons.qrc
install/: enki.desktop
src/: core.cpp  core.h  editor.cpp  editor.h  enki.cpp  file_explorer.cpp  file_explorer.h  filtered_fs_model.cpp  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h  module.h  open_file_list.cpp  open_file_list.h  option.h  project.cpp  project.h  settings.cpp  settings.h  workspace.cpp  workspace.h
src/basic_actions/: basic_actions.cpp  basic_actions.h
src/core/: core.cpp  core.h  editor.cpp  editor.h  filtered_fs_model.h  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h  open_file_list.cpp  project.h  workspace.cpp  workspace.h
src/file_browser/: file_browser.cpp  file_browser.h  file_tree.cpp  file_tree.h
src/lib/: subprocess.cpp  subprocess.h
src/lib/locator/: locator_command.cpp  locator_command.h  locator_dialog.cpp  locator_dialog.h  locator_list_model.cpp  locator_list_model.h
src/locator/: locator.cpp  locator.h  locator_dialog.cpp  locator_dialog.h  locator_list_model.cpp  locator_model.cpp  locator_model.h  open_file_command.cpp  open_file_command.h
src/modules/basic_actions/: basic_actions.cpp  basic_actions.h
src/modules/file_browser/: file_browser.cpp  file_browser.h  file_tree.cpp  file_tree.h
src/modules/locator/: LocatorDialog.ui  locator.cpp  locator.h  open_file_command.cpp  open_file_command.h
src/modules/open_file/: open_file.cpp  open_file.h  open_file_command.h
src/modules/recent_dirs/: recent_dirs.cpp  recent_dirs.h  recent_dirs_command.cpp  recent_dirs_command.h
src/modules/search_replace/: search_controller.cpp  search_controller.h  search_widget.cpp
src/modules/zoom/: zoom.cpp  zoom.h
src/recent_dirs/: recent_dirs.cpp  recent_dirs.h
src/search-replace/: search_controller.cpp  search_controller.h  search_pattern.cpp  search_pattern.h  search_widget.cpp  search_widget.h
src/search_replace/: search_controller.cpp  search_controller.h  search_flags.h  search_widget.cpp  search_widget.h
tests/: test_core.cpp  test_editor.cpp  test_file_actions.cpp  test_file_operations.cpp  test_main_window.cpp
